<resources>
    <string name="tab_conversation">会话</string>
    <string name="tab_contacts">联系人</string>
    <string name="tab_me">我</string>
    <string name="group_member_with_more">%1$s 等</string>
    <string name="group_member">%1$s</string>
    <string name="group_members">群组成员</string>
    <string name="member_separator">,&#160;</string>
    <string name="contact_search_hint">搜索联系人</string>
    <string name="room_title">%1$s (%2$d/%3$d)</string>
    <string name="user_logon">用户已登录</string>
    <string name="login_title">用户登录</string>
    <string name="user_name_hint">用户号码/手机号码/邮箱地址</string>
    <string name="user_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="login_app">登录中瑞特对讲</string>
    <string name="login_failed">登录失败</string>
    <string name="getting_room_info">正在获取房间信息...</string>
    <string name="in_room_fallback">正在对讲</string>
    <string name="in_room_with_individual">正在与 %1$s 对讲</string>
    <string name="in_room_with_groups">正在 %1$s 中对讲</string>
    <string name="in_room_postfix">" (对讲中)"</string>
    <string name="in_room">正在该房间中对讲</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">知道了</string>
    <string name="dialog_join">加入</string>
    <string name="dialog_yes_switch">切换</string>
    <string name="dialog_navigate_to_current_room">切换至&quot;%1$s&quot;</string>
    <string name="dialog_confirm_title">确定吗</string>
    <string name="dialog_confirm_switch_title">切换房间</string>
    <string name="receive_invite_switch_confirm">%1$s 邀请您加入对讲房间 %2$s, 要加入吗?</string>
    <string name="room_talking">请讲话</string>
    <string name="room_other_is_talking">%1$s 正在讲话</string>
    <string name="room_prompt_switching">切换房间</string>
    <string name="room_prompt_switching_message">当前正在对讲, 呼叫新的联系人将会退出当前的对讲, 继续切换?</string>
    <string name="room_prompt_important">当前房间不可退出</string>
    <string name="room_prompt_important_message">房间&quot;%1$s&quot;被管理员标记为重要房间, 当前不可退出</string>
    <string name="room_last_active_user_time">%1$s %2$s</string>
    <string name="room_quited">房间已经被退出</string>
    <string name="error_title">出错啦</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_unknown_server">服务器错误</string>
    <string name="error_retry">重试</string>
    <string name="error_content">%1$s</string>
    <string name="error_input_name">用户名不能为空</string>
    <string name="error_input_password">密码不能为空</string>
    <string name="error_password_not_same">两次输入密码不一致</string>
    <string name="error_password_not_long_enough">密码位数太低</string>
    <string name="error_no_record_permission">录音权限被拒绝，对讲将无法工作, 请同意此权限</string>
    <string name="error_no_phone_permission">控制电话权限被拒绝，对讲将无法正常工作，请同意此权限</string>
    <string name="error_getting_user_info">获取该用户信息失败</string>
    <string name="error_download">下载失败。请检查您的存储卡是否有剩余空间</string>
    <string name="error_unable_to_get_room_info">获取房间信息失败</string>
    <string name="error_no_such_room">没有该房间</string>
    <string name="error_no_such_user">没有该用户</string>
    <string name="error_user_not_logon">未登录用户无法进行此操作</string>
    <string name="error_join_room">加入房间失败</string>
    <string name="error_login_failed">登录失败。请检查用户名和密码是否正确</string>
    <string name="error_login_failed_with_reason">登录失败: %1$s</string>
    <string name="error_service_empty_response">服务器故障</string>
    <string name="error_room_is_important_to_quit">当前加入的房间&quot;%1$s&quot;被管理员标记为重要房间, 不可退出</string>
    <string name="error_no_permission">当前用户无此操作权限</string>
    <string name="error_timeout">操作超时</string>
    <string name="error_unable_to_connect">无法连接到服务器</string>
    <string name="error_forced_logout">您的账号在其它设备上登录, 本机登录已被注销</string>
    <string name="error_has_unsaved_change">本页面有未保存的修改, 退出后将放弃保存. 确认退出吗?</string>
    <string name="error_group_not_exists">该群组不存在</string>
    <string name="error_empty_content">请输入反馈的详细信息</string>
    <string name="error_delete_fail_in_room">无法删除正在对讲的房间, 请退出房间后再试</string>
    <string name="error_no_android_permissions">对不起, 您必须同意请求的所有协议以便程序正常工作</string>
    <string name="room_loading">加载中...</string>
    <string name="source_bluetooth">蓝牙</string>
    <string name="source_speaker">喇叭</string>
    <string name="source_headphone">耳机</string>
    <string name="joining_room">正在进入房间...</string>
    <string name="connecting_to_server">正在连接到服务器...</string>
    <string name="please_wait">请稍候</string>
    <string name="login_in_progress">正在登录</string>
    <string name="notification_user_online">%1$s 在线</string>
    <string name="notification_joining_room">正在进入对讲房间...</string>
    <string name="notification_user_logging_in">正在登录...</string>
    <string name="notification_rejoining_room">断线重连中...</string>
    <string name="notification_user_offline">%1$s 离线</string>
    <string name="logout">注销</string>
    <string name="exit_room">退出房间</string>
    <string name="profile_edit">修改个人资料</string>
    <string name="settings">设置</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="log_out_current_user">注销当前用户</string>
    <string name="log_out_confirm_message">注销后将接收不到其他人的呼叫，确定吗?</string>
    <string name="error_no_rooms">查看通讯录以开始对讲</string>
    <string name="auto_exit_summary">当房间只剩下最后一个人时，自动退出房间</string>
    <string name="auto_exit">自动退出</string>
    <string name="block_call">对讲优先于通话</string>
    <string name="block_call_summary">开启后对讲时来电将被拒接</string>
    <string name="general_settings">常规设置</string>
    <string name="shortcut_settings">快捷拨号设置</string>
    <string name="select_shortcuts">选择快捷拨号键</string>
    <string name="play_indicator_sounds">开启对讲提示音</string>
    <string name="play_indicator_sounds_explained">关闭后, 发言、抢麦等对讲操作将被静音</string>
    <string name="update_title">新版本%1$s发布</string>
    <string name="update">更新</string>
    <string name="app_updating">%1$sv%2$s.apk</string>
    <string name="invite_you_to_join">邀请你加入对讲</string>
    <string name="invite_you_to_join_by_whom">%1$s 邀请你加入对讲</string>
    <string name="invite_you_to_join_group_by_whom">%1$s 邀请你加入房间 %2$s</string>
    <string name="received_multiple_invitations">收到%1$s条邀请</string>
    <string name="ignore_all_and_cancel">忽略全部</string>
    <string name="dialog_ignore">忽略</string>
    <string name="download_complete_toast">更新下载完成。您可以现在点击安装, 或者从系统的“下载”程序中找到安装包手动安装</string>
    <string name="invite_to_join">对讲邀请</string>
    <string name="multiple_invite_to_join">收到多个对讲邀请</string>
    <string name="bluetooth_device_connected">蓝牙对讲设备已连接</string>
    <string name="bluetooth_device_disconnected">蓝牙对讲设备已断开</string>
    <string name="keep_session">保持会话</string>
    <string name="keep_session_explained">作为对讲发起人, 退出房间后依然允许其它成员继续留在房间里。关闭此选项, 退出房间将通知其他人也退出</string>
    <string name="room_kicked_out">对讲发起人已经关闭会话, 当前对讲房间已被退出</string>
    <string name="edit_profile">修改个人资料</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="change_password">更改密码</string>
    <string name="type_old_password">输入当前密码</string>
    <string name="type_new_password">输入新密码(至少六个字符)</string>
    <string name="type_new_password_confirmed">再次输入新密码</string>
    <string name="save">保存</string>
    <string name="saving">保存中</string>
    <string name="quit">退出</string>
    <string name="add">添加</string>
    <string name="add_members">添加成员</string>
    <string name="room_updated">房间更新成功</string>
    <string name="yesterday">昨天</string>
    <string name="room_name">房间名称</string>
    <string name="delete_room">删除房间记录</string>
    <string name="all_member_with_number">所有成员(%1$d)</string>
    <string name="room_members">房间成员</string>
    <string name="room_info">房间信息</string>
    <string name="finish">完成</string>
    <string name="finish_with_number">完成(%1$d)</string>
    <string name="user_list">用户列表</string>
    <string name="establish_new_room">发起新对讲</string>
    <string name="create_room">创建新对讲</string>
    <string name="room_name_with_numbers">%1$s (%2$d/%3$d)</string>
    <string name="user_info">用户信息</string>
    <string name="enterprise">公司</string>
    <string name="view_all">查看所有成员</string>
    <string name="call">呼叫</string>
    <string name="group_name">群组名称</string>
    <string name="group_info">群组信息</string>
    <string name="join_room">加入房间</string>
    <string name="ignore">忽略</string>
    <string name="join">加入</string>
    <string name="view">查看</string>
    <string name="ignore_all">忽略全部</string>
    <string name="invitation_list">邀请列表(%1$d)</string>
    <string name="just_now">刚刚</string>
    <string name="search_contacts">搜索联系人</string>
    <string name="type_feedback_title">输入一个问题的简单描述 (可选)</string>
    <string name="type_feedback_content">输入问题的详细描述</string>
    <string name="submit">提交</string>
    <string name="thanks_for_feedback">感谢您的反馈, 正在向服务器提交反馈</string>
    <string name="feedback_complete">反馈提交成功</string>
    <string name="give_up_and_exit">放弃并退出</string>
    <string name="level">等级</string>
    <string name="trial_exp_in_days">您的试用将在%1$d天内结束</string>
    <plurals name="days_ago">
        <item quantity="other">%1$s天以前</item>
    </plurals>
    <plurals name="num_new_messages">
        <item quantity="other">%1$s条新消息</item>
    </plurals>
    <string name="level_with_number">%1$s级</string>
    <string name="name_with_level">%1$s (%2$s)</string>
    <string name="field_required">该项目不能为空</string>
    <string name="type_room_name">房间名称</string>
    <string name="room_not_updated">房间未更新</string>
    <string name="contact_updated">通讯录更新完成</string>
    <string name="shortcut_mode_no_op">无操作</string>
    <string name="shortcut_mode_contact">呼叫通讯录中的联系人/群组</string>
    <string name="shortcut_mode_room">呼叫对讲历史记录中条目</string>
    <string name="shortcut_with_callee">呼叫 %1$s</string>
    <string name="room_initiator">发起者</string>
    <string name="copy_right">Copyright @ 2015-2016 成都贤智科技\n保留所有权利</string>
    <string name="or">或</string>
    <string name="click_to_share">分享下载连接</string>
    <string name="scan_barcode">扫描二维码获取下载链接</string>
    <string name="share_text">亲们，推荐一款专业软对讲APP, 为行业客户提供实时对讲保证，可广泛用于出租车、酒店、小区物业、交通运输、自驾、物流、电力、铁路等现有对讲公共和行业市场，欢迎试用、合作。有需要的请联系QQ：276376336，电话18011563127（微信绑定）。 App下载地址:%1$s ，推广测试账号：2000010–2000015，密码000000</string>
    <string name="share_via">分享下载连接</string>
    <string name="share">分享应用</string>
    <string name="log_upload">日志上报</string>
    <string name="total_log_files">一共 %1$d 个日志文件，大小 %2$s。是否确定上传？</string>
    <string name="upload">上传</string>
    <string name="log_upload_success">日志上传成功，感谢您的支持</string>
    <string name="no_upload">没有可上传的日志</string>
    <string name="downtime_next_day_with_time">次日 %1$s</string>
    <string name="downtime_settings">免打扰设置</string>
    <string name="downtime_range">免打扰时段</string>
    <string name="enable_downtime">免打扰模式</string>
    <string name="downtime_description">开启后将收不到其它人的呼叫</string>
    <string name="click_to_set_time">点击设置时间</string>
    <string name="downtime_start_time">开始时间</string>
    <string name="downtime_end_time">结束时间</string>
    <string name="no_permission_to_downtime">当前用户无权限使用该功能</string>
    <string name="speak_forbidden">禁止发言</string>
    <string name="to">至</string>
    <string name="member_invitation_sent">已向%1$d位成员发出对讲邀请</string>
    <string name="member_invitation_sent_none">已无其他成员可邀请</string>
    <string name="member_invitation_sent_failed">邀请失败：%1$s</string>
    <string name="people_nearby">附近的人</string>
    <string name="group_chat">对话</string>
    <string name="choose_chat_type">选择聊天类型</string>
    <string name="chat_type_walkie_talkie">对讲</string>
    <string name="chat_type_video">视频聊天</string>
    <string name="speaker_is_on">扬声器已经打开</string>
    <string name="speaker_is_off">扬声器已经关闭</string>
    <string name="error_user_no_permission_to_speak">当前用户无权限抢麦</string>
    <string name="type_text">在此输入文字</string>
    <string name="start_chat">开始聊天</string>
    <string name="phone_number">电话号码</string>
    <string name="error_login_timeout">登录超时，请检查网络连接</string>
</resources>