<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:key="general"
        android:title="@string/general_settings">

        <CheckBoxPreference
            android:title="@string/auto_exit"
            android:key="@string/key_auto_exit"
            android:defaultValue="true"
            android:summary="@string/auto_exit_summary"/>

        <CheckBoxPreference
            android:title="@string/block_call"
            android:summary="@string/block_call_summary"
            android:defaultValue="true"
            android:key="@string/key_block_calls"/>

        <CheckBoxPreference
            android:title="@string/play_indicator_sounds"
            android:summary="@string/play_indicator_sounds_explained"
            android:defaultValue="true"
            android:key="@string/key_play_indicator_sound" />

    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:key="shortcuts"-->
        <!--android:title="@string/shortcut_settings">-->

        <!--<ListPreference-->
            <!--android:key="@string/key_shortcut_mode"-->
            <!--tools:summary="呼叫 xxx"-->
            <!--android:persistent="false"-->
            <!--android:title="不在对讲时长按" />-->

    <!--</PreferenceCategory>-->

</PreferenceScreen>