<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/scan_barcode"
        style="@style/Text.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/share_barCode"
        android:layout_marginTop="@dimen/unit_two"
        tools:src="@color/blue"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <TextView
        android:text="@string/or"
        style="@style/Text.Body2"
        android:layout_marginTop="@dimen/unit_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/share_btn"
        android:text="@string/click_to_share"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>