<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="right"
    android:minWidth="300dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/timePicker_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/to"
        android:layout_marginTop="@dimen/unit_one"
        android:layout_marginBottom="@dimen/unit_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/timePicker_endTime"
        android:layout_marginRight="@dimen/unit_one"
        android:layout_marginLeft="@dimen/unit_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?attr/buttonBarNegativeButtonStyle"
            android:id="@+id/timePicker_cancel"
            android:text="@string/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="?attr/buttonBarPositiveButtonStyle"
            android:id="@+id/timePicker_ok"
            android:text="@string/dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>