<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:gravity="top|center_horizontal"
              android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_three"
        android:src="@drawable/logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/unit_two"
        android:layout_marginRight="@dimen/unit_two"
        android:layout_marginTop="@dimen/unit_two">

        <android.support.design.widget.TextInputEditText
            style="@style/Text.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_name_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/unit_two"
        android:layout_marginRight="@dimen/unit_two"
        android:layout_marginTop="@dimen/unit_one">

        <android.support.design.widget.TextInputEditText
            style="@style/Text.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_one"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_loginBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/unit_one"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/login_share"
            style="@style/Text.Body1"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/unit_one"
            android:text="@string/share"/>

        <TextView
            style="@style/Text.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"/>

        <TextView
            android:id="@+id/login_about"
            style="@style/Text.Body1"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/unit_one"
            android:text="@string/about"/>


    </LinearLayout>

</LinearLayout>
