<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:padding="@dimen/unit_half"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/inviteItem_inviterIcon"
        tools:background="@color/red"
        android:layout_marginTop="@dimen/unit_three"
        android:layout_width="@dimen/profile_icon_size"
        android:layout_height="@dimen/profile_icon_size"/>

    <TextView
        android:id="@+id/inviteItem_inviterName"
        tools:text="凡超"
        style="@style/Text.Subhead"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/unit_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/inviteItem_message"
        style="@style/Text.Headline"
        android:layout_marginTop="@dimen/unit_one"
        android:layout_marginLeft="@dimen/unit_four"
        android:layout_marginRight="@dimen/unit_four"
        android:text="@string/invite_you_to_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/unit_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/inviteItem_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/dialog_cancel"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/inviteItem_join"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/dialog_join"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </FrameLayout>

</LinearLayout>