<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_two"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/userDetails_icon"
            android:layout_width="@dimen/profile_icon_size"
            android:layout_height="@dimen/profile_icon_size"
            android:layout_margin="@dimen/unit_two"
            tools:src="@color/blue" />

        <TextView
            android:id="@+id/userDetails_name"
            style="@style/Text.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/userDetails_icon"
            android:layout_toRightOf="@+id/userDetails_icon"
            android:paddingBottom="@dimen/unit_half"
            android:paddingTop="@dimen/unit_half"
            tools:text="User 1" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_two"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/unit_two"
        android:paddingRight="@dimen/unit_two"
        android:visibility="gone">

        <TextView
            style="@style/Text.ProfileItem"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enterprise" />

        <TextView
            android:id="@+id/userDetails_enterpriseName"
            style="@style/Text.ProfileItem.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="我的公司" />

    </LinearLayout>

    <View style="@style/Divider.Lighter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/unit_two"
        android:paddingRight="@dimen/unit_two">

        <TextView
            style="@style/Text.ProfileItem"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/level" />

        <TextView
            android:id="@+id/userDetails_priority"
            style="@style/Text.ProfileItem.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="七级" />

    </LinearLayout>


    <Button
        android:id="@+id/userDetails_call"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/unit_one"
        android:layout_marginRight="@dimen/unit_one"
        android:layout_marginTop="@dimen/unit_two"
        android:text="@string/chat_type_walkie_talkie" />

    <Button
        android:id="@+id/userDetails_videoChat"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/unit_two"
        android:layout_marginLeft="@dimen/unit_one"
        android:layout_marginRight="@dimen/unit_one"
        android:layout_marginTop="@dimen/unit_one"
        android:text="@string/chat_type_video" />


</LinearLayout>